AQL problem solving and add tests with success